src/Style.css
/* ... */
.drinks__main-btn {
  background-color: var(--background-color);
  color: var(--primary-color);
  border-color: var(--primary-color);
  font-size: 1.6rem;
  font-weight: bold;
  margin: 0 1.5rem;
  padding: 0.8rem;
  width: 14rem;
  border-width: 0.3rem;
  border-style: solid;
  border-radius: 0.5rem;
  cursor: pointer;
}

.drinks__main-btn:hover {
  background-color: var(--primary-color);
  color: var(--background-color);
}

/* ------- drinkcard -------*/

.drinkcard__drinkcards {
  display: flex;
  flex-direction: column;
}

.drinkcard__container {
  border-top: 0.275rem solid var(--primary-color);
  border-radius: 0.8rem;
  background-color: white;
  box-shadow: var(--primary-shadow);
  display: grid;
  grid-template-rows: 1fr auto 1fr;
  grid-template-columns: 0.7fr 0.7fr 1fr 0.5fr;
  margin: 1rem;
  font-family: var(--font-family);
  align-items: center;
  width: 40vw;
  max-width: 40rem;
  padding: 0.8rem 2rem;
  align-self: center;
}
/*  */
.drinkcard__plus-icon {
  grid-row: 1 / 2;
  grid-column: 4 / 5;
}

.drinkcard__del-icon {
  transform: rotate(45deg);
  grid-row: 3 / 4;
}

.drinkcard__action-icon {
  cursor: pointer;
  width: 2.5rem;
  height: 2.5rem;
  justify-self: end;
  align-self: center;
  color: #6f7780;
  transition-duration: 0.4s;
}

.drinkcard__action-icon:hover {
  color: var(--primary-text-color);
}

.drinkcard__parameter-container {
  display: flex;
  flex-direction: column;
  grid-row: 3 / 4;
}

.drinkcard__parameter-container > h4,
.drinkcard__parameter-container > h3 {
  font-weight: 400;
  margin: 0;
  padding: 0;
}

.drinkcard__parameter-container > h4 {
  color: #6f7780;
  padding: 0.6rem 0;
  font-size: 1rem;
}

.drinkcard__parameter-container > h3 {
  font-size: 1.2rem;
  padding-bottom: 0.45rem;
  color: var(--primary-text-color);
}

.drinkcard__title {
  display: flex;
  flex-direction: row;
  align-items: center;
  grid-row: 1 / 2;
  grid-column: 1 / 4;
  padding-right: 0;
}

.drinkcard__title > h2 {
  color: var(--primary-text-color);
  font-size: 1.6rem;
}

.drinkcard__line {
  grid-row: 2/ 3;
  grid-column: 1 / 5;
  margin: 0;
  color: #dcdcdc;
}

.drinkcard__shot-icon {
  width: 2.7rem;
  height: 2.7rem;
  padding-right: 1.15rem;
  fill: var(--primary-text-color);
}

.drinkcard__other-icon {
  width: 3rem;
  height: 3rem;
  padding-right: 1rem;
  fill: var(--primary-text-color);
}

.drinkcard__beer-icon {
  width: 3rem;
  height: 3rem;
  padding-right: 1rem;
  fill: var(--primary-text-color);
}

.drinkcard__wine-icon {
  width: 3.3rem;
  height: 3.3rem;
  padding-right: 0.85rem;
  fill: var(--primary-text-color);
}

.drinkcard__martini-icon {
  width: 3.2rem;
  height: 3.2rem;
  padding-right: 0.9rem;
  fill: var(--primary-text-color);
}

.drinkcard__cognac-icon {
  width: 2.8rem;
  height: 2.8rem;
  padding-right: 1.1rem;
  fill: var(--primary-text-color);
}

.drinkcard__mojito-icon {
  width: 3rem;
  height: 3rem;
  padding-right: 1rem;
  fill: var(--primary-text-color);
}

.drinkcard__whisky-icon {
  width: 2.7rem;
  height: 2.7rem;
  padding-right: 1.15rem;
  fill: var(--primary-text-color);
}

.drinkcard__coctail-icon {
  width: 3.2rem;
  height: 3.2rem;
  padding-right: 0.9rem;
  fill: var(--primary-text-color);
}

/* ------- drinkcard -------*/

/* ------- newdrink -------*/

.newdrink__container {
  align-self: center;
}

.newdrink__form {
  border-top: 0.275rem solid var(--primary-color);
  border-radius: 0.8rem;
  background-color: white;
  box-shadow: var(--primary-shadow);
  display: grid;
  grid-template-rows: 1fr auto 1fr;
  grid-template-columns: 0.7fr 0.7fr 1fr 0.5fr;
  margin: 1rem;
  font-family: var(--font-family);
  align-items: center;
  width: 40vw;
  max-width: 40rem;
  padding: 0.8rem 2rem;
}

.newdrink__parameter-container {
  grid-row: 3 / 4;
  display: flex;
  flex-direction: column;
}

.newdrink__parameter-subcontainer {
  display: flex;
  flex-direction: row;
}

.newdrink__parameter-container > h4 {
  font-weight: 400;
  color: #6f7780;
  padding: 0.8rem 0;
  font-size: 1.1rem;
  margin: 0;
}

.newdrink__parameter-subcontainer > h3 {
  font-weight: 400;
  color: var(--primary-text-color);
  font-size: 1.1rem;
  margin: 0;
  justify-self: start;
  align-self: center;
  padding-left: 0.3rem;
}

.newdrink__timePassed-input,
.newdrink__abv-input,
.newdrink__volume-input {
  color: var(--primary-text-color);
  font-weight: bold;
  font-size: 1.3rem;
  width: 3rem;
  margin: 0;
  height: 2rem;
  border: 0.5px solid #b1b4b6;
  border-radius: 0.3rem;
  padding: 0;
  padding-left: 0.55rem;
}
.newdrink__submit {
  justify-self: end;
  grid-column: 3 / 5;
}

.newdrink__volume-input:focus,
.newdrink__abv-input:focus,
.newdrink__timePassed-input:focus {
  outline: none !important;
  border: 0.5px solid var(--primary-color);
  border-radius: 0.3rem;
}

.newdrink__type-input {
  grid-column: 1 / 3;
  width: 13rem;
  height: 2.5rem;
  margin-bottom: 1.3rem;
  background-color: #f7f7f7;
  border: 0.03125rem solid #b1b4b6;
  cursor: pointer;
  border-radius: 0.3125rem;
  padding: 0 0.55rem;
  font-size: 1.3rem;
  font-weight: bold;

  /*  replacing the default arrow  */
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  background-size: 0.9625rem 0.61875rem;
  background-image: url(./icons/expand.svg);
  background-repeat: no-repeat;
  background-position: right 1.03125rem top 50%;
}

.newdrink__title {
  grid-row: 1 / 2;
  grid-column: 1 / 3;
}

.newdrink__mobile-del-button,
.newdrink__mobile-plus-button {
  display: none;
}

/* ------- newdrink -------*/

@media only screen and (max-width: 1300px) {
  .drinkcard__container {
    width: 50vw;
  }

  .newdrink__form {
    width: 50vw;
  }
}
/* ... */

